data/derived/comb/progs/unify/prog1277.ml.out
Characters 80-81:
  else count + 1 sumList(digitsOfInt n);;
               ^
Error: This expression has type int
       This is not a function; it cannot be applied.
